crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: crawler
  name: synergychat-crawler
  labels:
    app: synergychat-crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synergychat-crawler
  template:
    metadata:
      labels:
        app: synergychat-crawler
    spec:
      volumes:
          - name: cache-volume
            emptyDir: {}
          - name: synergychat-api-volume
            persistentVolumeClaim:
              claimName: synergychat-api-pvc
      containers:
        - name: synergychat-crawler-1
          image: bootdotdev/synergychat-crawler:latest
          volumeMounts:
            - name: cache-volume
              mountPath: /cache
        - name: synergychat-crawler-2
          image: bootdotdev/synergychat-crawler:latest
          volumeMounts:
            - name: cache-volume
              mountPath: /cache
        - name: synergychat-crawler-3
          image: bootdotdev/synergychat-crawler:latest
          volumeMounts:
            - name: cache-volume
              mountPath: /cache
